# formation_project_12

./: .env.example  .gitignore  DOC.md  Pipfile  README.md  config.py  pyproject.toml  requirements.txt
adapters/: orm.py  repositories.py
controllers/: login.py  misc.py  permission.py
db_reset/: create.sql  insert.sql
domain/: model.py  validators.py
infra/: orm.py  repositories.py  session_factory.py
services/: authentication.py  dto.py  jwt_handler.py  services.py  unit_of_work.py
services/app/: base.py  clients.py  collaborator.py  collaborators.py  contracts.py  events.py  users.py
services/auth/: authentication.py  jwt_handler.py
src/ee_crm/: __main__.py  config.py  exceptions.py  loggers.py
src/ee_crm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ee_crm/adapters/: orm.py  repositories.py
src/ee_crm/cli_interface/: authentication.py  commands.py  entry_point.py  utils.py
src/ee_crm/cli_interface/app/: cli_func.py  client.py  collaborator.py  contract.py  event.py  user.py
src/ee_crm/cli_interface/views/: view_base.py  view_base_crud.py  view_client.py  view_collaborator.py  view_contract.py  view_errors.py  view_event.py  view_user.py
src/ee_crm/controllers/: authentication.py  default_uow.py  login.py  misc.py  permission.py  utils.py
src/ee_crm/controllers/app/: base.py  client.py  collaborator.py  contract.py  event.py  user.py
src/ee_crm/controllers/auth/: authentication.py  permission.py  predicate.py  rbac.py
src/ee_crm/domain/: model.py  validators.py
src/ee_crm/services/: dto.py  unit_of_work.py
src/ee_crm/services/app/: base.py  clients.py  collaborators.py  contracts.py  events.py  users.py
src/ee_crm/services/auth/: authentication.py  jwt_handler.py  (+1 more)
tempo_sql_reset/: create.sql  drop.sql  insert.sql
tests/: conftest.py
tests/test_adapters/: test_orm.py  test_repositories.py
tests/test_adapters/integration/: test_orm.py
tests/test_cli_interface/: test_authentication.py  test_cli_func.py  test_user.py  test_utils.py  test_view_crud_base.py  test_view_errors.py
tests/test_controller/: test_collaborator.py  test_permission.py  test_utils.py
tests/test_controller/test_integration/: test_authentication.py  test_client.py  test_collaborator.py  test_contract.py  test_event.py  test_permission.py  test_predicate.py  test_user.py
tests/test_domain/: test_model.py  test_validators.py
tests/test_infra/: conftest.py  test_orm.py  test_repositories.py  test_session_factory.py  test_uow.py
tests/test_service/: conftest.py  mock_uow.py  test_authentication.py  test_client.py  test_clients.py  test_collaborator.py  test_collaborators.py  test_contracts.py  test_events.py  test_jwt_handler.py  test_permissions.py  test_services.py  test_uow.py  test_users.py
tests/test_service/integration/: test_uow.py
