[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ee-crm"
version = "0.1.3"
description = "Epic Event CRM Project CLI"
requires-python = ">=3.12"
dependencies = [
    "click>=8",
    "sqlalchemy>=2",
    "python-dotenv>=1",
    "psycopg[binary]>=3.1",
    "argon2-cffi>=25",
    "pyjwt>=2"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "coverage",
    "pytest-cov",
    "sentry-sdk"
]

[project.scripts]
eecrm = "ee_crm.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.coverage.run]
source = ["src/ee_crm"]
omit = [
    "tests/*",
    "pyproject.toml",
    "z_manual/*",
    "__init__.py"
]
branch = true

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__:",
    "@(abc\\.)?abstractmethod"
]
